--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.0",
+    "react-spinners": "^0.17.0",
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
